--- a/index.html
+++ b/index.html
@@ -858,8 +858,8 @@ rc.update();
 
                     <div class="alert alert-info mt-4">
                         <h5><i class="fas fa-life-ring"></i> Need More Help?</h5>
-                        <p>Visit our <a href="#" class="alert-link">community forums</a> or open an issue on our
-                            <a href="#" class="alert-link">GitHub repository</a> for additional support.
+                        <p>Visit our <a href="https://github.com/RCduino/RCduino" class="alert-link">community forums</a> or open an issue on our
+                            <a href="https://github.com/RCduino/RCduino" class="alert-link">GitHub repository</a> for additional support.
                         </p>
                     </div>
                 </section>
@@ -869,7 +869,7 @@ rc.update();
 
     <footer class="text-center py-4 text-white">
         <div class="container">
-            <p>RCduino Library &copy; 2023 RCduino Development Team | Version 1.0.0</p>
+            <p>RCduino Library &copy; 2025 RCduino Development Team | Version 1.0.0</p>
             <div class="social-icons">
                 <a href="#" class="text-white mx-2"><i class="fab fa-github"></i></a>
                 <a href="#" class="text-white mx-2"><i class="fab fa-discord"></i></a>
