--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCduino Library Documentation</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Basic Meta Tags -->
+<title>RCduino Library Documentation</title>
+<meta name="description" content="Official documentation for RCduino - an Arduino library for developing and controlling RC cars, planes, boats, and quadcopters.">
+
+<!-- SEO Meta Tags -->
+<meta name="keywords" content="RCduino, Arduino RC library, RC car control, RC plane Arduino, Arduino quadcopter, Arduino RC documentation, RC library Arduino, open source RC projects">
+<meta name="author" content="RCduino Development Team">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="RCduino Library Documentation">
+<meta property="og:description" content="Learn how to use RCduino for building RC vehicles with Arduino - includes examples, setup guide, and API reference.">
+<meta property="og:url" content="https://rcduino.github.io/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://rcduino.github.io/assets/logo.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="https://rcduino.github.io/assets/logo.png">
+<meta name="twitter:title" content="RCduino Library Documentation">
+<meta name="twitter:description" content="Explore the official documentation of RCduino Arduino library for RC vehicle development.">
+<meta name="twitter:image" content="https://rcduino.github.io/assets/logo.png">
+<meta name="twitter:site" content="@RCduino">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://rcduino.github.io/">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
