--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <!-- Basic Meta Tags -->
 <title>RCduino Library Documentation</title>
 <meta name="description" content="Official documentation for RCduino - an Arduino library for developing and controlling RC cars, planes, boats, and quadcopters.">
+<meta name="google-site-verification" content="sCb6_BdpPN2As0NSD2qkfYhvK-pGDEG52XmcydWo_Bw">
+<meta name="msvalidate.01" content="4F4E46EDA3E4EC58FAB8A050FF64CAD2" />
+
 
 <!-- SEO Meta Tags -->
 <meta name="keywords" content="RCduino, Arduino RC library, RC car control, RC plane Arduino, Arduino quadcopter, Arduino RC documentation, RC library Arduino, open source RC projects">
