--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Basic Meta Tags -->
 <title>RCduino Library Documentation</title>
 <meta name="description" content="Official documentation for RCduino - an Arduino library for developing and controlling RC cars, planes, boats, and quadcopters.">
-<meta name="google-site-verification" content="sCb6_BdpPN2As0NSD2qkfYhvK-pGDEG52XmcydWo_Bw">
+<meta name="google-site-verification" content="toFMMktpkx2k9psMQ0J2bLO0gqZ2Q2JKrom6BNJZPC4" />
 <meta name="msvalidate.01" content="4F4E46EDA3E4EC58FAB8A050FF64CAD2" />
 
 
