--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="#installation" class="btn btn-primary btn-lg me-3">
                         <i class="fas fa-download"></i> Get Started
                     </a>
-                    <a href="#examples" class="btn btn-outline-light btn-lg">
+                    <a href="https://github.com/RCduino/RCduino/tree/main/examples" class="btn btn-outline-light btn-lg">
                         <i class="fas fa-code"></i> View Examples
                     </a>
                 </div>
